sjsonnet/test/resources/new_test_suite/error.import_json_high_before_literal.jsonnet.golden
sjsonnet.ParseError: Expected "\"":1:10, found "\\uD800A\"}\n"
    at [<root>].(error.import_json_high_before_literal.jsonnet:1:1)
